# speedrun-game

./: .gitignore  README.md  solanaRoyale.rs
Assets/: 3rdPartyAsset-Links.txt  ConnectionSwitch.cs  CreateTestWallet.cs  DispatchToGame.cs  DisplayBalance.cs  DisplayPublicKey.cs  GenerateAccount.cs  ReGenerateAccount.cs  SolanaManager.cs  SolanaRoyale.cs  Toast.cs
Assets/BR200xRPM/Avatar/: RPM_Default_Feminine.asset  RPM_Default_Masculine.asset
Assets/BR200xRPM/Resources/: SimpleRPMAvatarSettings.asset
Assets/Plugins/Outline/: OutlineResources.asset
Assets/Scenes/: Wallet.unity
Assets/TPSBR/: link.xml
Assets/TPSBR/Animations/: JetpackUnpack.anim
Assets/TPSBR/Audio/: AudioMixer.mixer
Assets/TPSBR/Materials/: ExplosiveGrenadeHitPosition.mat  FlashGrenadeHitPosition.mat  FusionLogo.mat  GenAreaDeepWater.mat  GenAreaWater.mat  Glow_SpawnPlace.mat  Grid.mat  Grid2.mat  GridAqua.mat  GridBlue.mat  GridGreen.mat  GridOrange.mat  GridRed.mat  GridViolet.mat  GridYellow.mat  Ground.mat  Linger_mult.mat  MapWater.mat  PolyGlow.mat  PolyGlowTransparent.mat  PolySolidGlow.mat  ShrinkingArea.mat  ShrinkingAreaLow.mat  ShrinkingAreaTarget.mat  ShrinkingAreaTargetLow.mat  SimpleBrown.mat  SimpleGray.mat  SimpleGreen.mat  SimpleRed.mat  SimpleWhite.mat  Skybox.mat  SmokeGrenade.mat  Transparent.mat  (+5 more)
ProjectSettings/: DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  PresetManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
program/solana_royale/: Cargo.toml
program/solana_royale/src/: lib.rs
(+694 files in other folders)
