[package]
name = "solana-royale"
version = "0.1.0"
description = "solanaRoyale blockchain game written in Rust"
authors = ["Your Name <your-email@example.com>"]
repository = "https://github.com/izzetemredemir/speedrun-game" 
license = "Apache-2.0" # İlgili lisans bilgileri
homepage = "https://your-website.com/" # Oyunun web sitesi (varsa)
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.10.0"
solana-program = "~1.10.35"

[dev-dependencies]
solana-program-test = "~1.10.35"
solana-sdk = "~1.10.35"

[lib]
name = "solanaRoyale"
crate-type = ["cdylib", "lib"]
